add routes and controller to employees and swagger configuration
